feat(*): fill base module